sprint 8 доп. Optional для методов getById